--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -22,6 +22,11 @@
       display: flex;
       align-items: center;
 
+      .link{
+        color: inherit;
+        text-decoration: none;
+      }
+
       img{
         height: 25px;
         margin-right: 40px;
